--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "To-do list!",
   "description": "It's a to-do list!",
   "dependencies": {
-    "material-components-web": "^6.0.0"
+    "material-components-web": "^6.0.0",
+    "webpack": "^4.43.0",
+    "webpack-dev-server": "^3.11.0",
+    "sass-loader": "^8.0.2",
+    "sass": "^1.26.8",
+    "css-loader": "^3.6.0",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.0.0"
   }
 }
