--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "webpack-dev-server": "^3.1.11"
   },
   "dependencies": {
-    "@material/button": "^1.0.0",
-    "@material/ripple": "^1.0.0",
-    "@material/typography": "^1.0.0"
+    "material-components-web": "^6.0.0"
   },
   "engines": {
     "node": "10.x"
